<resources>
    <string name="app_name">DBMSProject2</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Password Manager</string>
    <string name="title_activity_login">Login / SignIn</string>
    <string name="title_activity_registeration">Register / SignUp</string>
    <string name="lbUsername">Username</string>
    <string name="lbPassword">Password</string>
    <string name="btnLogin">Submit</string>
    <string name="lbRegister"> Don\'t have an account? Register Here</string>
    <string name="htPassword">Enter Password</string>
    <string name="htUsername">Enter Username</string>
    <string name="lbName">Name:</string>
    <string name="htName">Enter Full Name</string>
    <string name="lbEmailID">Email ID</string>
    <string name="htEmailID">Enter your email id</string>
    <string name="lbNewPassword">New Password:</string>
    <string name="htNewPassword">Enter New Password</string>
    <string name="htConfirmPassword">Retype New Password</string>
    <string name="lbConfirmPassword">Confirm Password</string>
    <string name="btnRegister">Register</string>
    <string name="title_activity_purpose">Choose generate or retrieve password</string>
    <string name="generatePassword">Generate Password</string>
    <string name="ManagePasswords">View Passwords</string>
    <string name="cdescManagePassword">Manage Password</string>
    <string name="title_activity_survey">Answer Survey</string>
    <string name="cdescGeneratePassword">Generate Password</string>
    <string name="website">Enter the Website</string>
    <string name="htSurvey">enter answer here</string>
    <string name="surveyQuestion">Survey Question comes here</string>
    <string name="btnSubmit">Submit</string>
    <string name="title_activity_template">PassPhrase and Password</string>
    <string name="PassPhrase">PassPhrase :</string>
    <string name="btnGeneratePassword">Generate Password</string>
    <string name="btnsvPasswd">Save Password</string>
    <string name="title_activity_recover_password">Recover Password</string>
    <string name="htregWebsite">Enter the website</string>
    <string name="htpassphrase">Enter PassPhrase</string>
    <string name="btnrevPassword">Recover Password</string>
    <string name="title_activity_password_show">"Show Password "</string>
    <string name="title_activity_forgot_pass_phrase">Forgot PassPhrase</string>
    <string name="htforgotPassPhrase">Enter the website</string>
    <string name="htWebsite">Website:</string>
    <string name="forgotPassphrase">forgot the passphrase please click here</string>
    <string name="sendemail">Send Email</string>
    <string name="btnGenerateTemplate">Show PassPhrase</string>
</resources>
