<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_recover_password"
    tools:context="com.dbmsproject2.dbmsproject2.RecoverPassword">

    <TextView
        android:text="Website"
        android:id="@+id/tvregWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etregWebsite"
        android:hint="@string/htregWebsite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvregPassPhrase"
        android:text="PassPhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/etregPassPhrase"
        android:hint="@string/htpassphrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnrevPassword"
        android:text="@string/btnrevPassword"
        android:onClick="btnrevPassword"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvforgotPassPhrase"
        android:text="@string/forgotPassphrase"
        android:onClick="btnforgotPassPhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
