<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_forgot_pass_phrase"
    tools:context="com.dbmsproject2.dbmsproject2.ForgotPassPhraseActivity">

    <TextView
        android:id="@+id/tvWebsite2"
        android:text="@string/htWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:hint="@string/htforgotPassPhrase"
        android:id="@+id/etforgotPassPhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/sendemail"
        android:id="@+id/btnSendPassPhrase"
        android:onClick="btnSendPassPhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
