<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="#13BFE3"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_login"
    tools:context="com.dbmsproject2.dbmsproject2.LoginActivity">
    <RelativeLayout
        android:id="@+id/rlLogin"
        android:background="#13BFE3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/llLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="115dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
                <TextView
                    android:id="@+id/tvUsername"
                    android:text="@string/lbUsername"
                    android:textColor="#000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/etUsername"
                    android:textColor="#000"
                    android:textColorHint="#000"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/htUsername"/>

                <TextView
                    android:id="@+id/tvPassword"
                    android:text="@string/lbPassword"
                    android:textColor="#000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/etPassword"
                    android:textColor="#000"
                    android:textColorHint="#000"
                    android:inputType="textPassword"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/htPassword"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView" />

                <Button
                    android:id="@+id/btnLogin"
                    android:text="@string/btnLogin"
                    android:textColor="#000"
                    android:textColorHint="#000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="btnLogin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvRegister"
                    android:text="@string/lbRegister"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/colorRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="btnRegister"
                    android:layout_gravity="center"/>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
