<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_purpose"
    tools:context="com.dbmsproject2.dbmsproject2.PurposeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/llGeneratePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:contentDescription="@string/cdescGeneratePassword"
                android:src="@drawable/futurelocks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnGeneratePassword"
                android:text="@string/generatePassword"
                android:onClick="btnGeneratePassword"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="65dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/llManagePassword"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_below="@id/llGeneratePassword"
            android:layout_height="wrap_content">
            <ImageView
                android:contentDescription="@string/cdescManagePassword"
                android:src="@drawable/valut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/btnManagePassword"
                android:text="@string/ManagePasswords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="btnManagerPassword"/>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
