<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/bkcolor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_survey"
    tools:context="com.dbmsproject2.dbmsproject2.SurveyActivity">

    <RelativeLayout
        android:id="@+id/rlSurvey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/llWebsite"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="43dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/tvWebsite"
            android:text="@string/website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etWebsite"
            android:layout_width="match_parent"
            android:paddingBottom="10dp"
            android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llsurveySection"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="93dp"
            android:layout_below="@+id/llWebsite"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/tvSurveyQ1"
                android:text="@string/surveyQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/etSurveyA1"
                android:paddingBottom="10dp"
                android:hint="@string/htSurvey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tvSurveyQ2"
                android:text="@string/surveyQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/etSurveyA2"
                android:paddingBottom="10dp"
                android:hint="@string/htSurvey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tvSurveyQ3"
                android:layout_width="match_parent"
                android:text="@string/surveyQuestion"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/etSurveyA3"
                android:paddingBottom="10dp"
                android:hint="@string/htSurvey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btnSubmit"
                android:onClick="btnSubmit"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
